# hwinfo

./: Cargo.toml  Justfile  README.md
src/: main.rs
