[package]
name = "hw-info"
version = "0.1.5"
edition = "2021"

license-file = "LICENSE"
description = "A simple command line tool that displays useful system information."
homepage = "https://github.com/maciakl/hwinfo"
repository = "https://github.com/maciakl/hwinfo"
readme = "README.md"
keywords = ["system", "information", "hardware", "cli", "tool"]
categories = ["command-line-utilities", "system-info"]

[[bin]]
name="hwinfo"
path="src/main.rs"

[dependencies]
colored = "2.0.4"
serde = "1.0.188"
wmi = "0.13.1"
